--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,39 +1,34 @@
 //MY THEMA COLORS#
 $light-blue: #e3f2fd;
-$blue:    #83c7ec;
-$dark-blue:    #0e456b;
-
+$blue: #76bffb;
+$dark-blue: #0e456b;
 
 //WHITE&GREY COLORS
-$white:    #fff ;
-$gray-100: #f8f9fa ;
-$gray-200: #e9ecef ;
-$gray-300: #dee2e6 ;
-$gray-400: #ced4da ;
-$gray-500: #adb5bd ;
-$gray-600: #6c757d ;
-$gray-700: #495057 ;
-$gray-800: #343a40 ;
-$gray-900: #212529 ;
-$black:    #000 ;
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000;
 
-$primary:       $blue !default;
-$secondary:     $dark-blue !default;
-
+$primary: $blue !default;
+$secondary: $dark-blue !default;
 
 // ACCORDION OVERRIDES
-$accordion-padding-y:                     1.5rem;// LEAVE THE PADDING-Y TO DEFAULT
-$accordion-padding-x:                     1.5rem;// LEAVE THE PADDING-X TO DEFAULT
-$accordion-icon-color:                   $primary;
-$accordion-icon-active-color:            $secondary;
+$accordion-padding-y: 1.5rem; // LEAVE THE PADDING-Y TO DEFAULT
+$accordion-padding-x: 1.5rem; // LEAVE THE PADDING-X TO DEFAULT
+$accordion-icon-color: $primary;
+$accordion-icon-active-color: $secondary;
 
-$accordion-icon-width:                    1.25rem !default;
+$accordion-icon-width: 1.25rem !default;
 
-
-
-$accordion-button-icon:         url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-color}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
-$accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-active-color}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
-
+$accordion-button-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-color}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
+$accordion-button-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-active-color}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
 
 // ##########################################
 //   OPTION 1:
